selenium-grid-files/deployment-hub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-grid-hub-deployment
  labels:
    app: selenium-grid-hub
    name: selenium-grid-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium-grid-hub
  template:
    metadata:
      labels:
        app: selenium-grid-hub
    spec:
      containers:
        - name: selenium-grid-hub
          image: selenium/hub:3.0.1
          ports:
            - containerPort: 4444
              protocol: TCP
