selenium-grid-files/deployment-node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-node-chrome-deployment
  labels:
    app: selenium-node-chrome
    name: selenium-node-chrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium-node-chrome
  template:
    metadata:
      labels:
        app: selenium-node-chrome
    spec:
      containers:
        - name: selenium-node-chrome
#          image: selenium/node-chrome:85.0
          image: selenium/node-chrome:3.141
          ports:
            - containerPort: 4444
              protocol: TCP
            - containerPort: 5555
              protocol: TCP
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
      volumes:
        - name: dshm
          emptyDir: { "medium": "Memory" }
