selenium-grid-files/service-hub.yaml
apiVersion: v1
kind: Service
metadata:
  name: selenium-grid-hub
  labels:
    name: selenium-grid-hub
spec:
  selector:
    app: selenium-grid-hub
  ports:
    - name: web
      protocol: TCP
      port: 4444
      targetPort: 4444
