selenium-grid-files/ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: selenium-grid-gw
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port: 
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
